Tried to make the blur effect, missed colors completely.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="index.css" class="stylesheet">
     <title>Column-Task</title>
 </head>
+
 <body>
     <div id="contentContainer">
         <article id="articleOne">
@@ -16,16 +18,42 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>
                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud <br>
                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Aed do
-            </p>   
-            <button>Građani</button>
-            <button>Edukacija i odgoj</button>
-            <button>Stanove i gradnja</button>
-            <button>Kultura</button>
-            <br>
-            <button>Sport</button>
-            <button>Promet</button>
-            <button>Naknade i porezi</button>
-            <button>Gradski kotari i mjesni odbori</button>
+            </p>
+            <div class="btnSection">
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Građani</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Edukacija i odgoj</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Stanove i gradnja</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Kultura</div>
+                </div>
+                <br>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Sport</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Promet</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Naknade i porezi</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Gradski kotari i mjesni odbori</div>
+                </div>
+            </div>
         </article>
         <article id="articleTwo">
             <h1>Službeni grad</h1>
@@ -34,15 +62,41 @@
                 Karepovca, kontinuirano se provode mjerenja sljedećih parametara kvalitete zraka.
             </p>
             <br>
-            <button>Gradski kotari i mjesni odbori</button>
-            <button>Građani</button>
-            <button>Edukacija i odgoj</button>
-            <button>Sport</button>
-            <br>
-            <button>Stanove i gradnja</button>
-            <button>Kultura</button>
-            <button>Promet</button>
-            <button>Naknade i porezi</button>
+            <div class="btnSection">
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Gradski kotari i mjesni odbori</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Građani</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Edukacija i odgoj</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Sport</div>
+                </div>
+                <br>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Stanove i gradnja</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Kultura</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Promet</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Naknade i porezi</div>
+                </div>
+            </div>
         </article>
         <article id="articleThree">
             <h1>Servisne informacije</h1>
@@ -51,16 +105,43 @@
                 Karepovca, kontinuirano se provode mjerenja sljedećih parametara kvalitete zraka.
             </p>
             <br>
-            <button>Gradski kotari i mjesni odbori</button>
-            <button>Građani</button>
-            <button>Edukacija i odgoj</button>
-            <button>Sport</button>
-            <br>
-            <button>Stanove i gradnja</button>
-            <button>Kultura</button>
-            <button>Promet</button>
-            <button>Naknade i porezi</button>
+            <div class="btnSection">
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Gradski kotari i mjesni odbori</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Građani</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Edukacija i odgoj</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Sport</div>
+                </div>
+                <br>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Stanove i gradnja</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Kultura</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Promet</div>
+                </div>
+                <div class="parentBtn">
+                    <div class="backgroundBtn"></div>
+                    <div class="contentBtn">Naknade i porezi</div>
+                </div>
+        </div>
         </article>
     </div>
 </body>
+
 </html>
