Fixing some issues I overlooked

--- a/index.html
+++ b/index.html
@@ -20,39 +20,39 @@
                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Aed do
             </p>
             <div class="btnSection">
-                <div class="parentBtn">
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Građani</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Edukacija i odgoj</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Stanove i gradnja</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Kultura</div>
-                </div>
+                </button>
                 <br>
-                <div class="parentBtn">
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Sport</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Promet</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Naknade i porezi</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Gradski kotari i mjesni odbori</div>
-                </div>
+                </button>
             </div>
         </article>
         <article id="articleTwo">
@@ -63,39 +63,39 @@
             </p>
             <br>
             <div class="btnSection">
-                <div class="parentBtn">
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Gradski kotari i mjesni odbori</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Građani</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Edukacija i odgoj</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Sport</div>
-                </div>
+                </button>
                 <br>
-                <div class="parentBtn">
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Stanove i gradnja</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Kultura</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Promet</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Naknade i porezi</div>
-                </div>
+                </button>
             </div>
         </article>
         <article id="articleThree">
@@ -106,39 +106,39 @@
             </p>
             <br>
             <div class="btnSection">
-                <div class="parentBtn">
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Gradski kotari i mjesni odbori</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Građani</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Edukacija i odgoj</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Sport</div>
-                </div>
+                </button>
                 <br>
-                <div class="parentBtn">
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Stanove i gradnja</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Kultura</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Promet</div>
-                </div>
-                <div class="parentBtn">
+                </button>
+                <button class="parentBtn">
                     <div class="backgroundBtn"></div>
                     <div class="contentBtn">Naknade i porezi</div>
-                </div>
+                </button>
         </div>
         </article>
     </div>
