--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:900|Roboto" class="stylesheet">
-    <link rel="stylesheet" href="index.css" class="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:900|Roboto">
+    <link rel="stylesheet" href="index.css">
     <title>Column-Task</title>
 </head>
 
