--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="contentContainer">
-        <article id="articleOne">
+        <article class="articleOne">
             <h1>Život u Splitu</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>
@@ -55,7 +55,7 @@
                 </button>
             </div>
         </article>
-        <article id="articleTwo">
+        <article class="articleTwo">
             <h1>Službeni grad</h1>
             <p>
                 Na mjernoj postaji smještenoj na području gradskog kotara Kamen s južne strane <br>
@@ -98,7 +98,7 @@
                 </button>
             </div>
         </article>
-        <article id="articleThree">
+        <article class="articleThree">
             <h1>Servisne informacije</h1>
             <p>
                 Na mjernoj postaji smještenoj na području gradskog kotara Kamen s južne strane <br>
